# mojentic-mcp

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  TODO.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: build.yml  publish_documentation.yml  python-publish.yml  python.yml
.junie/: guidelines.md
docs/: index.md
docs/api/: client.md  http-server.md  index.md  llm-tool.md  rpc.md  stdio-server.md  transports.md
docs/overrides/: main.html
docs/overrides/stylesheets/: extra.css
docs/tutorials/: client-usage.md  custom-tools.md  http-server.md  index.md  multi-transport.md  stdio-server.md
spec/2024-11-05/: pagination.mdx  ping.mdx  tools.mdx
spec/2025-03-26/: pagination.mdx  ping.mdx  tools.mdx
src/_examples/: README.md  custom_tool_http.py  http_client_example.py  multi_transport_client_example.py  simple_http.py  simple_http_client.py  simple_stdio.py  stdio_client_example.py  task_list_tools_http.py
src/_examples/client/: multi_transport_client_example.py  ping_test.py  simple_http_client.py  stdio_client_example.py
src/_examples/server/: custom_tool_http.py  simple_http_server.py
src/mojentic_mcp/: client.py  client_spec.py  gateways.py  mcp_http.py  mcp_http_spec.py  mcp_stdio.py  mcp_stdio_spec.py  rpc.py  rpc_spec.py  transports.py  transports_spec.py
